--- a/projectsetc.html
+++ b/projectsetc.html
@@ -7,7 +7,7 @@ title: Projects etc.
   {% for post in site.posts %}
     <li>
       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2><p class="date">{{ post.date |  date: "%B %e, %Y" }} </p>
-      {{ post.excerpt }} 
+      {{ post.content }} 
     </li>
   {% endfor %}
 </ul>
